# tradebro-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest-ci.ini  pytest.ini  run-local-backend.sh.example  run-local.sh.example  run-tests.sh  setup.py
.github/workflows/: main.yaml  tests.yaml
src/appaccount/: views.py  web.py
src/appbackend/: views.py  web.py
src/appfrontend/: web.py
src/apptrade/: views.py  web.py
src/libaccount/: constants.py  context.py  errors.py
src/libaccount/domains/: me.py
src/libaccount/models/: mongo.py
src/libaccount/models/requestresponse/: request.py  response.py
src/libshared/: context.py  errors.py  fastapi.py  logging.py
src/libshared/models/: baserequestresponse.py
src/libtrade/domains/: trade.py
src/libtrade/models/: mongo.py
src/libtrade/models/requestresponse/: request.py  response.py
tests/: conftest.py
tests/fixtures/: trades.json  users.json
tests/integration/account/: test_bearer_token.py  test_hc.py  test_register_login.py  test_update_profile.py
tests/integration/trade/: test_hc.py  test_my_trades.py  test_new_trade.py
tests/unit/: test_basetime_fields.py  test_fastapi_utils.py  test_mongo_fixtures.py  test_utils.py
tradebro/appaccount/: views.py  web.py
tradebro/libaccount/: constants.py  context.py  errors.py
tradebro/libaccount/domains/: me.py
tradebro/libaccount/models/: mongo.py
tradebro/libaccount/models/requestresponse/: request.py  response.py
tradebro/libshared/: fastapi.py  logging.py  utils.py
tradebro/libshared/models/: baserequestresponse.py  mongo.py
tradebro/libtrade/models/: mongo.py
