[tool.poetry]
name = "tradebro-api"
version = "0.1.0"
description = ""
authors = ["Batista Harahap <batista@bango29.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
beanie = "^1.10.0"
python-json-logger = "^2.0.2"
slugify = "^0.0.1"
pyhumps = "^3.5.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.17.5"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-raises = "^0.11"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
pytest-env = "^0.6.2"
pytest-async-mongodb = {git = "https://github.com/gonzaloverussa/pytest-async-mongodb.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
